syntax = "proto3";

package Protos;

message gBoolValue {
  bool value = 1;
}